--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "method-override": "~1.0.0",
     "morgan": "~1.0.0",
     "mysql": "^2.5.3",
-    "serve-favicon": "~2.0.1"
+    "serve-favicon": "~2.0.1",
+    "sqlite3": "^3.0.4"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
