--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
+    "bluebird": "^2.3.11",
     "body-parser": "~1.5.0",
     "bookshelf": "^0.7.9",
     "composable-middleware": "^0.3.0",
